--- a/app/src/components/options/OptionsModal.scss
+++ b/app/src/components/options/OptionsModal.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
+  overflow-y: auto;
 
   p {
     text-align: justify;
